Modified Project Folder Structure

--- a/src/StableGPT/BlazorServer/Pages/_Host.cshtml
+++ b/src/StableGPT/BlazorServer/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace WebApp.Blazor.Server
+@namespace BlazorServer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using DevExpress.ExpressApp.Blazor.Components
 
